--- a/MohammadAliModule10/src/main/AndroidManifest.xml
+++ b/MohammadAliModule10/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MohammadAliLab10"
         tools:targetApi="31">
         <activity
+            android:name=".MoeFouSplash"
+            android:exported="true" />
+        <activity
             android:name=".FouladiActivity10"
             android:exported="true">
             <intent-filter>
