--- a/MohammadAliModule10/src/main/AndroidManifest.xml
+++ b/MohammadAliModule10/src/main/AndroidManifest.xml
@@ -9,20 +9,28 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:theme="@style/Theme.AppCompat.DayNight"
+
         android:supportsRtl="true"
-        android:theme="@style/Theme.MohammadAliLab10"
         tools:targetApi="31">
         <activity
             android:name=".MoeFouSplash"
-            android:exported="true" />
-        <activity
-            android:name=".FouladiActivity10"
+            android:theme="@style/Theme.AppCompat.DayNight"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".FouladiActivity10"
+
+            android:exported="true">
+
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
     </application>
 
