--- a/MohammadAliModule10/src/main/AndroidManifest.xml
+++ b/MohammadAliModule10/src/main/AndroidManifest.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
-        android:allowBackup="true"
+
+
+    android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/Theme.AppCompat.DayNight"
+        android:theme="@style/Theme.AppCompat.NoActionBar"
 
         android:supportsRtl="true"
         tools:targetApi="31">
@@ -24,7 +28,7 @@
         </activity>
         <activity
             android:name=".FouladiActivity10"
-
+            android:theme="@style/Theme.AppCompat.DayNight"
             android:exported="true">
 
 
@@ -32,6 +36,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-    </application>
+    </application>>
 
 </manifest>
