--- a/MohammadAliModule10/build.gradle
+++ b/MohammadAliModule10/build.gradle
@@ -33,7 +33,10 @@ dependencies {
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
+    implementation(libs.play.services.ads)
+
     implementation libs.constraintlayout
+    implementation libs.play.services.location
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
